style: Add correct gap for toggleSwitch element.

--- a/src/components/ToggleSwitch/ToggleSwitch.css
+++ b/src/components/ToggleSwitch/ToggleSwitch.css
@@ -6,6 +6,7 @@
     cursor: pointer;
     overflow: hidden;
     position: relative;
+    margin-right: 6px;
 }
 
 .toggle-switch__checkbox {
